--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.firebase:firebase-storage:11.0.4'
+    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
     testCompile 'junit:junit:4.12'
 }
 
