--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,11 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.example.android.imagetotext"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -20,20 +22,32 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.firebase:firebase-storage:11.0.4'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.google.android.gms:play-services-vision:11.0.4'
+    compile 'com.android.support:design:25.0.2'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.github.jkennethcarino:RTextEditorView:0.1.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
+
+
+
 
 
 
