--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity android:name=".SignUp">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login" />
+        <activity android:name=".SignUp" />
         <activity android:name=".Home" />
         <activity android:name=".MyGroups" />
         <activity
