--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.android.imagetotext"
         minSdkVersion 16
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.github.jkennethcarino:RTextEditorView:0.1.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
